refactoring and adding Javadoc